Progress sheet now closes when done.  Updated credits with Cocoa Programming for Mac OS X.

--- a/mod_install/Credits.html
+++ b/mod_install/Credits.html
@@ -24,6 +24,7 @@ I'd like to give thanks to a few identities:<br>
 <ul>
 <li>Siph0n for helping me when I had Cocoa problems
 <li>The book "Programming in Objective-C" as before I read it I couldn't undertand an anounce of Objective-C
+<li>The book "Cocoa Programming for Mac OS X" as it helped me get past road blocks
 <li>Borkware's quickies, Cocoa Dev Central, and the Cocoa Dev wiki that helped me when I hit road blocks
 </ul>
 </font>
