--- a/mod_install/Credits.html
+++ b/mod_install/Credits.html
@@ -22,8 +22,9 @@ First version programmed in Objective-C/Cocoa!  This is also the first version t
 I'd like to give thanks to a few identities:<br>
 <font size=3>
 <ul>
+<li>Apple's own online documentation
 <li>Siph0n for helping me when I had Cocoa problems
-<li>The book "Programming in Objective-C" as before I read it I couldn't undertand an anounce of Objective-C
+<li>The book "Programming in Objective-C" as before I read it I couldn't undertand an ounce of Objective-C
 <li>The book "Cocoa Programming for Mac OS X" as it helped me get past road blocks
 <li>Borkware's quickies, Cocoa Dev Central, and the Cocoa Dev wiki that helped me when I hit road blocks
 </ul>
