--- a/mod_install/Credits.html
+++ b/mod_install/Credits.html
@@ -16,7 +16,7 @@ By Peter "halprin" Kendall<br>
 <br>
 </p>
 Version 7.0:<br>
-First version programmed in Objective-C/Cocoa!  This is also the first version that is a Universal Binary!<br>
+First version programmed in Cocoa/Objective-C!  This is also the first version that is a Universal Binary!<br>
 <br>
 <br>
 I'd like to give thanks to a few identities:<br>
