Checks to make sure the file is the correct type before installing.  Fixed UMOD progress window hang bug.  Updated credits.

--- a/mod_install/Credits.html
+++ b/mod_install/Credits.html
@@ -16,7 +16,7 @@ By Peter "halprin" Kendall<br>
 <br>
 </p>
 Version 7.0:<br>
-First version programmed in Cocoa/Objective-C!  This is also the first version that is a Universal Binary!<br>
+First version programmed in Cocoa/Objective-C!  This is also the first version that is a Universal Binary!  Other than this, the program is smaller, faster, and just plain better!<br>
 <br>
 <br>
 I'd like to give thanks to a few identities:<br>
