Auto-open when you double click on a UMOD file in the Finder.  Updated credits.

--- a/mod_install/Credits.html
+++ b/mod_install/Credits.html
@@ -15,8 +15,16 @@ By Peter "halprin" Kendall<br>
 <br>
 <br>
 </p>
-Version 7.0.0:<br>
-First version programmed in Cocoa/Objective-C and is an Universal Binary!  Other than that, the program is smaller, faster, and just plain better!<br>
+Version 7.5<br>
+<ul>
+<li>Automaticaly opens up when you click on a UMOD file in the Finder and auto-fills in the File Path and sets the mod type to UMOD<br>
+</ul>
+<br>
+Version 7.0:<br>
+<ul>
+<li>First version programmed in Cocoa/Objective-C and is an Universal Binary!  Other than that, the program is smaller, faster, and just plain better!<br>
+<li>No longer has a problem with spaces in the filepath to the UMOD
+</ul>
 <br>
 <br>
 I'd like to give thanks to a few identities:<br>
