Fixed opening up .ut4mods.  Changed the credits.  This was version 7.0.1.

--- a/mod_install/Credits.html
+++ b/mod_install/Credits.html
@@ -15,14 +15,15 @@ By Peter "halprin" Kendall<br>
 <br>
 <br>
 </p>
-Version 7.5<br>
+Version 7.0.1<br>
 <ul>
-<li>Automaticaly opens up when you click on a UMOD file in the Finder and auto-fills in the File Path and sets the mod type to UMOD<br>
+<li>Automaticaly opens up when you double click on a UMOD file in the Finder and auto-fills in the File Path and sets the mod type to UMOD
+<li>.ut4mods can now be installed correctly
 </ul>
 <br>
 Version 7.0:<br>
 <ul>
-<li>First version programmed in Cocoa/Objective-C and is an Universal Binary!  Other than that, the program is smaller, faster, and just plain better!<br>
+<li>First version programmed in Cocoa/Objective-C and is an Universal Binary!  Other than that, the program is smaller, faster, and just plain better!
 <li>No longer has a problem with spaces in the filepath to the UMOD
 </ul>
 <br>
