Log viewer is in place fully.  This was release v. 7.1

--- a/Credits.html
+++ b/Credits.html
@@ -15,6 +15,13 @@ By Peter "halprin" Kendall<br>
 <br>
 <br>
 </p>
+Version 7.1<br>
+<ul>
+<li>Plugged memory leaks including a major one
+<li>Added a preference to label installed files (command+,)
+<li>Added an install log that is viewed during installation and can be after the fact (command+option+L)
+</ul>
+<br>
 Version 7.0.1<br>
 <ul>
 <li>Automaticaly opens up when you double click on a UMOD file in the Finder and auto-fills in the File Path and sets the mod type to UMOD
