--- a/Credits.html
+++ b/Credits.html
@@ -11,10 +11,16 @@
 <font size=2>(formally known as Mod UT 2k4 Installer)</font><br>
 <br>
 By Peter "halprin" Kendall<br>
-<a href="http://homepage.mac.com/kendallp/at_PAK/">@PAK software</a>
+<a href="http://www.kendallp.net/at_PAK/">@PAK software</a>
 <br>
 <br>
 </p>
+Version 7.2<br>
+<ul>
+<li>Leopard compatibility
+<li>Updated the @PAK software URL in the credits
+</ul>
+<br>
 Version 7.1<br>
 <ul>
 <li>Plugged memory leaks including a major one
