--- a/trunk/Credits.html
+++ b/trunk/Credits.html
@@ -17,38 +17,38 @@ By Peter "halprin" Kendall<br>
 </p>
 Version 7.2<br>
 <ul>
-<li>Leopard compatibility
-<li>Updated the @PAK software URL in the credits
+<li>Leopard compatibility</li>
+<li>Updated the @PAK software URL in the credits</li>
 </ul>
 <br>
 Version 7.1<br>
 <ul>
-<li>Plugged memory leaks including a major one
-<li>Added a preference to label installed files (command+,)
-<li>Added an install log that is viewed during installation and can be after the fact (command+option+L)
+<li>Plugged memory leaks including a major one</li>
+<li>Added a preference to label installed files (command+,)</li>
+<li>Added an install log that is viewed during installation and can be after the fact (command+option+L)</li>
 </ul>
 <br>
 Version 7.0.1<br>
 <ul>
-<li>Automaticaly opens up when you double click on a UMOD file in the Finder and auto-fills in the File Path and sets the mod type to UMOD
-<li>.ut4mods can now be installed correctly
+<li>Automaticaly opens up when you double click on a UMOD file in the Finder and auto-fills in the File Path and sets the mod type to UMOD</li>
+<li>.ut4mods can now be installed correctly</li>
 </ul>
 <br>
 Version 7.0:<br>
 <ul>
-<li>First version programmed in Cocoa/Objective-C and is an Universal Binary!  Other than that, the program is smaller, faster, and just plain better!
-<li>No longer has a problem with spaces in the filepath to the UMOD
+<li>First version programmed in Cocoa/Objective-C and is an Universal Binary!  Other than that, the program is smaller, faster, and just plain better!</li>
+<li>No longer has a problem with spaces in the filepath to the UMOD</li>
 </ul>
 <br>
 <br>
 I'd like to give thanks to a few identities:<br>
 <font size=3>
 <ul>
-<li>Apple's own online documentation
-<li>Siph0n for helping me when I had Cocoa problems
-<li>The book "Programming in Objective-C" as before I read it I couldn't undertand an ounce of Objective-C
-<li>The book "Cocoa Programming for Mac OS X" as it helped me get past road blocks
-<li>Borkware's quickies, Cocoa Dev Central, and the Cocoa Dev wiki that helped me when I hit road blocks
+<li>Apple's own online documentation</li>
+<li>Siph0n for helping me when I had Cocoa problems</li>
+<li>The book "Programming in Objective-C" as before I read it I couldn't undertand an ounce of Objective-C</li>
+<li>The book "Cocoa Programming for Mac OS X" as it helped me get past road blocks</li>
+<li>Borkware's quickies, Cocoa Dev Central, and the Cocoa Dev wiki that helped me when I hit road blocks</li>
 </ul>
 </font>
 </font>
